--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
-    "expo-app-loading": "^2.1.1",
-    "expo-font": "^11.10.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
