--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-dotenv": "^3.4.11",
+    "react-native-image-picker": "^7.1.2",
     "react-router-native": "^6.23.0"
   },
   "devDependencies": {
