--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,12 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-dotenv": "^3.4.11",
-    "react-native-image-picker": "^7.1.2",
     "react-router-native": "^6.23.0"
   },
   "devDependencies": {
